--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -43,6 +43,12 @@ body {
     height: 50vh;
 }
 
+.content .bot-container > .chat-container > .input-form {
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 1px 3px #ddd;
+    margin: 1px;
+}
+
 .content > .bot-container > .chat-container > .history {
     border-radius: 4px 4px 0 0;
     box-shadow: inset 0 1px 3px #ddd;
@@ -79,20 +85,25 @@ body {
     color: #f1f1f1
 }
 
+.content > .faq-container {
+    height: 100ch;
+    overflow: auto;
+}
+
 .message p {
     margin: 0;
 }
 
 .pure-form textarea {
     border: none;
-    border-radius: 0 0 4px 4px;
-    box-shadow: inset 0 0px 3px #ddd;
-    padding-right: 2em;
+    border-radius: none;
+    box-shadow: none;
+    resize: none;
 }
-
+/* 
 textarea:focus, input:focus{
     border-color: #00d548 !important;
-}
+} */
 
 .text_input {
     font-size: 16px;
@@ -112,9 +123,8 @@ textarea:focus, input:focus{
     background-size: cover;
     background-color: transparent;
     border: none;
-    position: absolute;
-    right: 50%;
-    margin: 0.1em 0;
+    position: relative;
+    display: inline-block;
 }
 .send-button:hover {
     cursor: pointer;
@@ -134,7 +144,8 @@ textarea:focus, input:focus{
 
 .faq__detail[open] > .faq__summary { 
     font-weight: 700;
-    line-height: 2em;
+    line-height: 1em;
+    padding: 1em;
 }
 
 .faq__summary {
@@ -178,14 +189,9 @@ details[open] .faq__summary:after {
     position: absolute;
     text-align: left;
     top: 0;
-    width: 90%;
-}
-
-.faq__question {
-    display: inline-block;
-    margin: 0.5em 0;
-    text-align: left;
-    width: 90%;
+    width: 95%;
+    margin: 0.1em 0;
+    font-size: 16px;
 }
 
 .faq__summary {
@@ -205,3 +211,38 @@ details[open] .faq__summary:after {
     line-height: 1.6;
     margin: 1em 0 0 0;
 }
+
+#wave {
+    margin: 0 0.5em;
+    position: absolute;
+}
+ 
+#wave .dot {
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    margin-right: 0.5px;
+    background: #60f;
+    animation: wave 1s linear infinite;
+    animation-delay: -0.9s;
+}
+
+#wave .dot.two {
+    animation-delay: -0.7s;
+}
+
+#wave .dot:nth-child(3) {
+    animation-delay: -0.6s;
+}
+  
+@keyframes wave {
+    0%,
+    60%,
+    100% {
+        transform: initial;
+    }
+    30% {
+        transform: translateY(-15px);
+    }
+} 
